; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_wpa_supplicant.c_wpa_supplicant_add_network.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_wpa_supplicant.c_wpa_supplicant_add_network.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_ssid = type { i32 }
%struct.wpa_supplicant = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.wpa_ssid* @wpa_supplicant_add_network(%struct.wpa_supplicant* %0) #0 {
  %2 = alloca %struct.wpa_ssid*, align 8
  %3 = alloca %struct.wpa_supplicant*, align 8
  %4 = alloca %struct.wpa_ssid*, align 8
  store %struct.wpa_supplicant* %0, %struct.wpa_supplicant** %3, align 8
  %5 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %3, align 8
  %6 = getelementptr inbounds %struct.wpa_supplicant, %struct.wpa_supplicant* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.wpa_ssid* @wpa_config_add_network(i32 %7)
  store %struct.wpa_ssid* %8, %struct.wpa_ssid** %4, align 8
  %9 = load %struct.wpa_ssid*, %struct.wpa_ssid** %4, align 8
  %10 = icmp ne %struct.wpa_ssid* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store %struct.wpa_ssid* null, %struct.wpa_ssid** %2, align 8
  br label %21

12:                                               ; preds = %1
  %13 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %3, align 8
  %14 = load %struct.wpa_ssid*, %struct.wpa_ssid** %4, align 8
  %15 = call i32 @wpas_notify_network_added(%struct.wpa_supplicant* %13, %struct.wpa_ssid* %14)
  %16 = load %struct.wpa_ssid*, %struct.wpa_ssid** %4, align 8
  %17 = getelementptr inbounds %struct.wpa_ssid, %struct.wpa_ssid* %16, i32 0, i32 0
  store i32 1, i32* %17, align 4
  %18 = load %struct.wpa_ssid*, %struct.wpa_ssid** %4, align 8
  %19 = call i32 @wpa_config_set_network_defaults(%struct.wpa_ssid* %18)
  %20 = load %struct.wpa_ssid*, %struct.wpa_ssid** %4, align 8
  store %struct.wpa_ssid* %20, %struct.wpa_ssid** %2, align 8
  br label %21

21:                                               ; preds = %12, %11
  %22 = load %struct.wpa_ssid*, %struct.wpa_ssid** %2, align 8
  ret %struct.wpa_ssid* %22
}

declare dso_local %struct.wpa_ssid* @wpa_config_add_network(i32) #1

declare dso_local i32 @wpas_notify_network_added(%struct.wpa_supplicant*, %struct.wpa_ssid*) #1

declare dso_local i32 @wpa_config_set_network_defaults(%struct.wpa_ssid*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
